--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,11 +15,13 @@
 
     <Button
         android:id="@+id/button1"
+        style="@style/AppTheme"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/textView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="30dp"
-        android:text="@string/showcoordbutton" />
+        android:text="@string/showcoordbutton"
+        android:textColor="@style/AppTheme" />
 
 </RelativeLayout>
