--- a/res/layout/maps_activity.xml
+++ b/res/layout/maps_activity.xml
@@ -4,6 +4,12 @@
     android:orientation="vertical"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
+
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="34dp"
+        android:text="@string/boton_buscame" />
  
 <com.google.android.maps.MapView
     android:id="@+id/mapa"
