--- a/res/layout/maps_activity.xml
+++ b/res/layout/maps_activity.xml
@@ -6,9 +6,9 @@
     android:layout_height="fill_parent">
 
     <Button
-        android:id="@+id/button1"
+        android:id="@+id/buscameB"
         android:layout_width="match_parent"
-        android:layout_height="34dp"
+        android:layout_height="wrap_content"
         android:text="@string/boton_buscame" />
  
 <com.google.android.maps.MapView
