Signed-off-by: Miguel Angel <mipegir@gmail.com>

--- a/res/menu/activity_main.xml
+++ b/res/menu/activity_main.xml
@@ -5,5 +5,6 @@
         android:showAsAction="never" />
     <item android:id="@+id/itemmenumaps"
         android:menuCategory="alternative"
-        android:title="@string/testmapas_m" />
+        android:title="@string/testmapas_m" 
+        android:showAsAction="always"/>
 </menu>
