--- a/res/layout/maps_activity.xml
+++ b/res/layout/maps_activity.xml
@@ -16,6 +16,7 @@
 	    android:layout_width="fill_parent"
 	    android:layout_height="fill_parent"
 	    android:clickable="true" 
-	    android:apiKey="0pBY2dapW7dxaMHe0YbAbpzJnSs1JI2LYwrzmZQ"/>
+	    android:apiKey="0URK9GX9MEoJEtyZft0Sp_-ntikH1mYirwu5O2A" />
+	    <!-- android:apiKey="0pBY2dapW7dxaMHe0YbAbpzJnSs1JI2LYwrzmZQ"/> -->
  
 </LinearLayout>
