--- a/res/layout/activity_gestor_amigos.xml
+++ b/res/layout/activity_gestor_amigos.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RatingBar xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent" >
-    
-
-</RatingBar>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:orientation="vertical" android:layout_width="fill_parent"
+	android:layout_height="fill_parent">
+	<Button android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:id="@+id/xBtnContacts"
+		android:text="Pick Contacts" />
+</LinearLayout>
